2008-05-29  Martin Leidig  <mleidig@schlund.de>

	Added pfx:authconstraint XSLT function to check if a given
	authconstraint is fulfilled:
	* src/de/schlund/pfixcore/util/TransformerCallback.java: added 
	checkAuthConstraint method, log warning for non-existing
	authconstraints
	* projects/core/xsl/functions.xsl: added pfx:authconstraint XSLT
	function

	* src/de/schlund/pfixcore/util/TransformerCallback.java: Log warning
	if pfx:condition is called with non-existing condition id

	* src/de/schlund/pfixxml/config/includes/IncludesResolver.java: added
	'conditions' section type, add IOExceptions as exception cause
	* projects/core/schema/properties200401.xsd: refactored for fragment
	support
	* projects/core/schema/configfragments200609.xsd: added fragment
	support for conditions, import schema locally (not outdated version
	from http://pustefix.sourceforge.net)

2008-05-27  Martin Leidig  <mleidig@schlund.de>

	Added pfx:isAuthorized XSLT function, which simply checks if page
	access is authorized or not (returning a boolean value, as an 
	alternative or shortcut for the pfx:checkAuthorization function, 
	which returns more fine-grained authorization status information
	in the form of integer constants).

	* src/de/schlund/pfixcore/util/TransformerCallback.java
	* projects/core/xsl/functions.xsl

2008-05-27  Martin Leidig  <mleidig@schlund.de>

	Changed the pfx:button behaviour for pages with authconstraints, which
	don't set an authpage: until now the links to such pages were active
	and requesting them ended with an exception. Now these pages are
	handled like 'invisible', non-accessible, pages, i.e. no link is 
	created, but a span, optionally using the invisibleclass' CSS (or 
	pfx:invisible content). On demand we could also introduce special 
	unauthorized attributes/tags, for now this case is handled together
	with the non-accessible case.

	* src/de/schlund/pfixcore/util/TransformerCallback.java: add method